--- a/resume.html
+++ b/resume.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Home</title>
+	<title>Resume</title>
+	<link rel="shortcut icon" type="images/icon.png" href="images/icon.png?"/>
 	<meta charset="utf-8">
 	<meta name:"viewport" content="width=device-width,initial-scale=1.0">
 	<link rel="stylesheet" href="my-framework.css">
