--- a/resume.html
+++ b/resume.html
@@ -4,7 +4,7 @@
 	<title>Resume</title>
 	<link rel="shortcut icon" type="images/icon.png" href="images/icon.png?"/>
 	<meta charset="utf-8">
-	<meta name:"viewport" content="width=device-width,initial-scale=1.0">
+	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<link rel="stylesheet" href="my-framework.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
