--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 					<br>
 				</div>
 				<div class="col-sm-6">
-					<img id="me" src="images/me.jpg" height="560px" width="470px" alt="Picture of Dena">
+					<img id="me" src="images/me.jpg" class="img-fluid" height="560px" width="470px" alt="A picture of Dena" >
 				</div>
 			</div>
 		</div>
