--- a/form.html
+++ b/form.html
@@ -34,36 +34,41 @@
 </nav>
 
 	<main>
+		<div class="containter-fluid">
+			<div class="row">
+				<div class="col-sm-12">
+					<h1> Form </h1>
+						<p> This is an example of a form! </p>
+						<form action="https://webdevstudents.com/portfolio/submit-form.php" method="post">
+							<label for="first_name">First Name: </label>
+							<input 
+							type="text" 
+							name="first_name" 
+							id="first_name"> <br>
 
-		<h1> Form </h1>
-		<p> This is an example of a form! </p>
-		<form action="https://webdevstudents.com/portfolio/submit-form.php" method="post">
-			<label for="first_name">First Name: </label>
-			<input 
-			type="text" 
-			name="first_name" 
-			id="first_name"> <br>
+							<label for="last_name">Last Name: </label>
+							<input 
+							type="text" 
+							name="last_name" 
+							id="last_name"> <br>
 
-			<label for="last_name">Last Name: </label>
-			<input 
-			type="text" 
-			name="last_name" 
-			id="last_name"> <br>
+							<label for="email">Email: <input 
+								type="email" 
+								placeholder="Enter your email"
+								name="email"
+								id="email"> <br>
 
-			<label for="email">Email: <input 
-				type="email" 
-				placeholder="Enter your email"
-				name="email"
-				id="email"> <br>
-
-			<label for="phone">Phone: </label>
-			<input type="tel" 
-				name="phone" 
-				id="phone"> <br>
-			<input type="submit">
-			<input type="reset">
-		</form>
-		<p><b> DISCLAIMER: You cannot contact me through this form, it is just an example of a form.</b></p>
+							<label for="phone">Phone: </label>
+							<input type="tel" 
+								name="phone" 
+								id="phone"> <br>
+							<input type="submit">
+							<input type="reset">
+						</form>
+							<p><b> DISCLAIMER: You cannot contact me through this form, it is just an example of a form.</b></p>
+				</div>
+			</div>
+		</div>
 	</main>
 
 	<footer>
