--- a/portfolio.html
+++ b/portfolio.html
@@ -46,12 +46,12 @@
 			<div class="row">
 				<div class="col-sm-6">
 					<a href="animals/index.html">
-						<img src="images/animal-photography.png" class="img-fluid" alt="Screenshot of Dena's website about Animal Photography">
+						<img src="images/animal-photography.png" class="img-fluid" width="2880px" height="1330px" alt="Screenshot of a website about animal photography">
 					</a>	
 				</div>
 				<div class="col-sm-6">
 					<a href="puppies/index.html">
-						<img src="images/puppies-site.png" class="img-fluid" alt="Screenshot of Dena's website about Puppies">
+						<img src="images/puppies-site.png" class="img-fluid" width="2880px" height="1330px" alt="Screenshot of a website about puppies">
 					</a>	
 				</div>
 			</div>
